Revamp TempModifier placement system